# HolographicMemory

./: .coverage.Philips-Mac-Studio.local.98152.XmYanGZx  .coverage.Philips-Mac-Studio.local.98176.XHVOSrBx  .coverage.Philips-Mac-Studio.local.98177.XslWNjgx  .coverage.Philips-Mac-Studio.local.98193.XDDdoBZx  .coverage.Philips-Mac-Studio.local.98194.XPKLFVVx  .coverage.Philips-Mac-Studio.local.98195.XmYwPJfx  .coverage.Philips-Mac-Studio.local.98197.XnpyAWhx  .coverage.Philips-Mac-Studio.local.98202.XSgIdgLx  .coverage.Philips-Mac-Studio.local.98208.XVmingMx  .coverage.Philips-Mac-Studio.local.98216.XgVBqxWx  .editorconfig  .env.example  .gitignore  .releaserc.json  Build_Plan_Template.md  FINAL_VALIDATION_REPORT.md  HolographicMemory.command  LAUNCH_STRATEGY.md  LICENSE  Makefile  Makefile.dev  Makefile.help  Makefile.lint  Makefile.prod  Makefile.syntax  Makefile.testing  NOBEL_STANDARDS_AUDIT.md  PERFORMANCE_BASELINE_MAC_STUDIO_M2_MAX.md  README.md  ROOT_CLEANUP_SUMMARY.md  TECHNICAL_IMPROVEMENTS.md  codex_phase55_implementation_prompt.md  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  launch_holo.sh  main.py  project_manifest.json  pyproject.toml  (+22 more)
.github/: CODEOWNERS
HolographicMemory/: HolographicMemory_Build_Plan.md
archive/: README.md  codex_phase4_feedback_and_fixes.md  codex_phase4_implementation_prompt.md  codex_test_script.py  codex_validation_prompt.md  codex_validation_summary.md  test_rs_debug_detailed.py  test_rs_simple.py
benchmarks/: __init__.py
build_holo/: CMakeCache.txt  Makefile  cmake_install.cmake  gpu_bench
dashboard/: app.py  wave_ecc_monitor.html
data/: README.md  f_0.txt  f_1.txt  f_2.txt  f_3.txt  f_4.txt  note.txt  test.txt
demo_data/: test.txt
demo_index2/: fileB.txt
demos/: README.md  conftest.py
deployment/: DEPLOYMENT_GUIDE.md  README.md  deployment_config.json  docker.md  kubernetes.md  monitoring.md  production.md  quick_start.md  security.md
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  wave_ecc_design.md
documentation/: BIBLIOGRAPHY.md  DEPLOYMENT_7LAYER_GUIDE.md  HOLOGRAPHIC_MEMORY_COMPREHENSIVE.md  INDEX.md  MIGRATION_V3_TO_V4.md  PERFORMANCE_ANALYSIS.md  SOA_OPERATIONS_RUNBOOK.md  SOA_TEST_PLAN.md  SOA_USER_MANUAL.md  ecc_design.md  holographic_containers.md  wave_ecc_production_guide.md
holographic-fs/: GETTING_STARTED.md  README.md  pyproject.toml
holographic-fs/native/holographic/: CMakeLists.txt  GPUBackend.cpp  GPUBackend.hpp  README.md  benchmarks_gpu.cpp  build_optimized.py  build_wave.py  gpu_binding.cpp  holographic_event_log.cpp  holographic_memory.cpp  holographic_memory_fast.cpp  holographic_memory_optimized.cpp  holographic_native_3d.cpp  holographic_wave_simd.cpp  hrr_binding.cpp  hwp_v4_decode.cpp  metal_binding.mm  quick_test.csv  setup.py.bak
holographic-fs/native/holographic/cuda/: CudaBackend.cu  CudaBackend.hpp
holographic-fs/native/holographic/data/holographic_memory/: current.wave
holographic-fs/native/holographic/data/holographic_memory/snapshots/: snapshot_20250906T171449.wave  snapshot_20250906T172748.wave  snapshot_20250906T172911.wave  snapshot_20250906T173113.wave  snapshot_20250906T173449.wave  snapshot_20250906T173509.wave  snapshot_20250906T173510.wave  snapshot_20250906T173513.wave  snapshot_20250906T175849.wave  snapshot_20250906T180137.wave  snapshot_20250907T102614.wave  snapshot_20250908T122949.hwp
holographic-fs/native/holographic/metal/: MetalBackend.hpp  MetalBackend.mm  MetalHoloCore.hpp  MetalHoloCore.mm  MetalHolographicBackend.hpp  holographic_memory.metal
holographic-fs/native/holographic/rocm/: HipBackend.cpp  HipBackend.hpp
holographic_memory/: __init__.py  cli.py  memory.py  router.py  vault.py
infrastructure/: README.md  add_monitoring_alerting.py  create_deployment_guides.py  implement_error_handling.py  optimize_service_communication.py
logs/: wave_ecc_stress.jsonl
macos/: README.md
research/: README.md
scripts/: benchmark_wave_ecc_performance.py  find_port.py  (+10 more)
services/core/: pyproject.toml
services/core/data/holographic_memory/: current.wave  metadata_3d.json
services/core/data/holographic_memory/patterns/: a.txt.hwp  test.txt.wave
services/core/data/holographic_memory/snapshots/: snapshot_20250907T104755.wave
services/core/holographicfs/backends/: python_holographic_memory.py
services/core/native/holographic/: CMakeLists.txt  build_detect.py  holographic_memory_optimized.cpp  holographic_wave_simd.cpp  hwp_v4_decode.hpp
services/core/native/holographic/cuda/: CudaBackend.hpp
services/core/native/holographic/data/holographic_memory/snapshots/: snapshot_20250906T173117.wave  snapshot_20250906T173547.wave  snapshot_20250906T175644.wave
services/core/native/holographic/metal/: MetalHolographicBackend.mm  holographic_memory.metal
services/core/native/holographic/rocm/: HipBackend.hpp
services/holographic-memory/core/native/holographic/: CMakeLists.txt  GPUBackend.cpp  GPUBackend.hpp  build_fast.py  build_linux.py  build_metal.py  gpu_binding.cpp  holographic_memory.cpp  holographic_native_3d.cpp  metal_binding.cpp  pyproject.toml  results_final.csv  results_metal.csv  rs_clean.cpp  setup.py  test_mathematical_validation.py
services/holographic-memory/core/native/holographic/cuda/: README.md
services/holographic-memory/core/native/holographic/data/holographic_memory/: README.md  current.hwp
services/holographic-memory/core/native/holographic/data/holographic_memory/patterns/: README.md
services/holographic-memory/core/native/holographic/data/holographic_memory/snapshots/: README.md  snapshot_20250906T171305.wave  snapshot_20250906T171902.wave  snapshot_20250906T172358.wave  snapshot_20250906T172746.wave  snapshot_20250906T172915.wave  snapshot_20250906T173701.wave
services/holographic-memory/core/native/holographic/metal/: MetalBackend.hpp  MetalBackend.mm  MetalHoloCore.hpp  MetalHoloCore.mm  MetalHolographicBackend.mm  README.md  holographic_kernels.metal  holographic_memory.metal
services/holographic-memory/core/native/holographic/rocm/: HipBackend.cpp  README.md
(+841 files in other folders)
